hphp/test/slow/named-local-present.hhas.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: okay' in %s/named-local-present.hhas:2
%A
